# waygreet

./: CLAUDE.md  Cargo.toml  README.md
contrib/: greetd-config.toml.example
data/: waygreet-high-contrast.css  waygreet.css  waygreet.toml.example
src/: app.rs  config.rs  greetd.rs  main.rs  session_env.rs  sessions.rs  style.rs
src/accessibility/: audio.rs  mod.rs  orca.rs  systemd.rs
src/components/: login_form.rs  mod.rs  power_menu.rs  session_selector.rs
systemd/: README.md  waygreet-orca.service
