[package]
name = "waygreet"
version = "0.1.0"
edition = "2021"
authors = ["Harley"]
license = "MIT"
description = "Accessibility-first Wayland GTK greeter for greetd"
repository = "https://github.com/destructatron/waygreet"
keywords = ["wayland", "greeter", "greetd", "accessibility", "gtk4"]
categories = ["gui", "accessibility"]

[dependencies]
# GTK4 and Relm4
gtk4 = { version = "0.9", features = ["v4_12"] }
relm4 = { version = "0.9", features = ["libadwaita"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

# greetd IPC
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }

# Layer shell for fullscreen
gtk4-layer-shell = "0.4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "process", "io-util", "macros"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Desktop entry parsing
freedesktop_entry_parser = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# D-Bus for systemd/accessibility
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Environment and utilities
dirs = "5"
nix = { version = "0.29", features = ["user", "fs"] }

[features]
default = []
demo = []  # Demo mode for testing without greetd

[profile.release]
lto = true
strip = true
